--- a/app/imports/ui/pages/user/newgame-page.html
+++ b/app/imports/ui/pages/user/newgame-page.html
@@ -14,46 +14,46 @@
       </form>
       <div id='rpg' style='display:none'>
         <div class="fields">
-          {{> Select_Form_Control label="Game" required=true options=gamesrpg errorMessage=(fieldError "games") }}
-          {{> Select_Form_Control label="Maxplayers" required=true options=players errorMessage=(fieldError "players") }}
+          {{> Select_Form_Control label="Name" required=true options=gamesrpg value='Name' errorMessage=(fieldError "gameName") }}
+          {{> Select_Form_Control label="Maximum players" required=true options=players errorMessage=(fieldError "maxPlayers") }}
         </div>
       </div>
       <div id='card' style='display:none'>
         <div class="fields">
-          {{> Select_Form_Control label="Game" required=true options=gamescard errorMessage=(fieldError "games") }}
-          {{> Select_Form_Control label="Maxplayers" required=true options=players errorMessage=(fieldError "players") }}
+          {{> Select_Form_Control label="Name" required=true options=gamescard errorMessage=(fieldError "gameName") }}
+          {{> Select_Form_Control label="Maxplayers" required=true options=players errorMessage=(fieldError "maxPlayers") }}
         </div>
       </div>
       <div id='board' style='display:none'>
         <div class="fields">
-          {{> Select_Form_Control label="Game" required=true options=gamesboard errorMessage=(fieldError "games") }}
-          {{> Select_Form_Control label="Maxplayers" required=true options=players errorMessage=(fieldError "players") }}
+          {{> Select_Form_Control label="Name" required=true options=gamesboard errorMessage=(fieldError "gameName") }}
+          {{> Select_Form_Control label="Maxplayers" required=true options=players errorMessage=(fieldError "maxplayers") }}
         </div>
       </div>
       <div id='mini' style='display:none'>
         <div class="fields">
-          {{> Select_Form_Control label="Game" required=true options=gamesmini errorMessage=(fieldError "games") }}
-          {{> Select_Form_Control label="Maxplayers" required=true options=players errorMessage=(fieldError "players") }}
+          {{> Select_Form_Control label="Name" required=true options=gamesmini errorMessage=(fieldError "gameName") }}
+          {{> Select_Form_Control label="Maxplayers" required=true options=players errorMessage=(fieldError "maxPlayers") }}
         </div>
       </div>
       <div id='dataFields' style='display:none'>
         <div class="fields">
           {{> Select_Form_Control label="Approx. Length of Game (in Hours)" required=optional options=gameLength errorMessage=(fieldError "gameLength") }}
-          {{> Text_Form_Control label="Location" placeholder="Hale Hino Study Hall" required=true value=profile.picture errorMessage=(fieldError "picture")}}
+          {{> Text_Form_Control label="Location" placeholder="Hale Hino Study Hall" value="My house" required=optional errorMessage=(fieldError "picture")}}
         </div>
         <div class="fields">
           {{> Checkbox_Form_Control label="Is Smoking Permitted?" checkboxes=smoking errorMessage=(fieldError "smoking") }}
           {{> Checkbox_Form_Control label="Is Alcohol Permitted?" checkboxes=alcohol errorMessage=(fieldError "alcohol") }}
         </div>
         <div class="fields">
-          {{> Text_Form_Control label="Meeting Date" required=true options=interests placeholder="04/07/2017" errorMessage=(fieldError "days") multiple=true }}
-          {{> Text_Form_Control label="Meeting Time" required=true options=interests placeholder="6:00pm" errorMessage=(fieldError "time") multiple=true }}
+          {{> Text_Form_Control label="Meeting Date" required=false options=interests placeholder="04/07/2017" errorMessage=(fieldError "days") multiple=true }}
+          {{> Text_Form_Control label="Meeting Time" required=false options=interests placeholder="6:00pm" errorMessage=(fieldError "time") multiple=true }}
         </div>
         <div class="field">
           {{> Checkbox_Form_Control label="Is this Meeting recurring?" checkboxes=recurring errorMessage=(fieldError "recurring") }}
         </div>
         <div class="fields">
-          {{> Social_Network_Form_Control label="Contact" required=true icon="person" placeholder="iamDM@hawaii.edu" value=profile.github errorMessage=(fieldError "github")}}
+          {{> Social_Network_Form_Control label="Contact" required=false icon="person" placeholder="iamDM@hawaii.edu" value=profile.github errorMessage=(fieldError "github")}}
           {{> Text_Form_Control label="Resources" placeholder="http://www.d20pfsrd.com/" errorMessage=(fieldError "resources") multiple=true }}
         </div>
         <div class="field">
