--- a/app/imports/ui/pages/user/newgame-page.html
+++ b/app/imports/ui/pages/user/newgame-page.html
@@ -1,7 +1,7 @@
 <template name="NewGame_Page">
   <div class="ui fluid text container segment">
     <h1 class="ui dividing header">
-      Create your own game group
+      Create Your Own Game Group
     </h1>
     <form class="ui equal width form game-data-form {{ errorClass }}">
       <a class="ui red ribbon label">Category</a>
@@ -35,80 +35,133 @@
       <div id="rpg" style="display:none">
         <a class="ui teal ribbon label">Game Information</a>
         <div class="ui divider"></div>
-        <div class="fields">
-          <div class="eight wide field">
-          {{> Select_Form_Control label="Game" required=true options=gamesrpg errorMessage=(fieldError "gameName") }}
-          </div>
-          <div class="four wide field">
-          {{> Select_Form_Control label="Maxplayers" required=true options=players errorMessage=(fieldError "maxPlayers") }}
-          </div>
+        <div class="field">
+          <label>Game</label>
+          <select class="ui dropdown" id="gameRPG">
+            <option value="">Name</option>
+            <option value="1">Dungeons & Dragons</option>
+            <option value="2">Shadowrun</option>
+            <option value="3">Call of Cthulhu</option>
+            <option value="4">Vampire: The Masquerade</option>
+            <option value="5">Star Wars The Roleplaying Game</option>
+            <option value="6">Pathfinder Roleplaying Game</option>
+            <option value="7">Other</option>
+          </select>
         </div>
       </div>
       <div id='card' style='display:none'>
-        <div class="fields">
-          <div class="eight wide field">
-          {{> Select_Form_Control label="Game" required=true options=gamescard errorMessage=(fieldError "gameName") }}
-          </div>
-          <div class="four wide field">
-          {{> Select_Form_Control label="Maximum Players" required=true options=players errorMessage=(fieldError "maxPlayers") }}
-          </div>
+        <a class="ui teal ribbon label">Game Information</a>
+        <div class="ui divider"></div>
+        <div class="field">
+          <label>Game</label>
+          <select class="ui dropdown" id="gameCARD">
+            <option value="">Name</option>
+            <option value="1">Poker</option>
+            <option value="2">Rummy</option>
+            <option value="3">Cribbage</option>
+            <option value="4">Spades</option>
+            <option value="5">Mahjong</option>
+            <option value="6">Other</option>
+          </select>
         </div>
       </div>
       <div id='board' style='display:none'>
-        <div class="fields">
-          <div class="eight wide field">
-          {{> Select_Form_Control label="Game Name" required=true options=gamesboard errorMessage=(fieldError "gameName") }}
-          </div>
-          <div class="four wide field">
-          {{> Select_Form_Control label="Maximum Players" required=true options=players errorMessage=(fieldError "maxplayers") }}
-          </div>
+        <a class="ui teal ribbon label">Game Information</a>
+        <div class="ui divider"></div>
+        <div class="field">
+          <label>Game</label>
+          <select class="ui dropdown" id="gameBOARD">
+            <option value="">Name</option>
+            <option value="1">Chess</option>
+            <option value="2">Monopoly</option>
+            <option value="3">Scrabble</option>
+            <option value="4">Backgammon</option>
+            <option value="5">Other</option>
+          </select>
         </div>
       </div>
       <div id='mini' style='display:none'>
-        <div class="fields">
-          <div class="eight wide field">
-          {{> Select_Form_Control label="Game Name" required=true options=gamesmini errorMessage=(fieldError "gameName") }}
-          </div>
-          <div class="four wide field">
-          {{> Select_Form_Control label="Maximum Players" required=true options=players errorMessage=(fieldError "maxPlayers") }}
-          </div>
+        <a class="ui teal ribbon label">Game Information</a>
+        <div class="ui divider"></div>
+        <div class="field">
+          <label>Game</label>
+          <select class="ui dropdown" id="gameMINI">
+            <option value="">Name</option>
+            <option value="1">Star Wars: X-Wing</option>
+            <option value="2">War Machine</option>
+            <option value="3">Hordes</option>
+            <option value="4">War Hammer</option>
+            <option value="5">Other</option>
+          </select>
         </div>
       </div>
       <div id='dataFields' style='display:none'>
         <div class="ui divider"></div>
-         <a class="ui orange ribbon label">Meeting Information</a>
-          <div class="ui divider"></div>
-
-          <label style="color: black">Approx. Length of Game (in Hours) </label>
-          <div class="ui selection dropdown">
-            <input type="hidden" name="gender">
-            <i class="dropdown icon"></i>
-            <div class="default text">Game Length</div>
-            <div class="menu">
-              <div class="item" data-value="1">1 hour</div>
-              <div class="item" data-value="2">2 hours</div>
-              <div class="item" data-value="3">3 hours</div>
-              <div class="item" data-value="4">4 hours+</div>
-            </div>
+        <a class="ui orange ribbon label">Meeting Information</a>
+        <div class="ui divider"></div>
+        <div class="ui two column grid">
+          <div class="seven wide column">
+            <label style="color: black">Maximum Players</label>
+            <select class="ui dropdown" id="Players">
+              <option value="">Max Players</option>
+              <option value="2">2 Players</option>
+              <option value="3">3 Players</option>
+              <option value="4">4 Players</option>
+              <option value="5">5 Players</option>
+              <option value="6">6 Players</option>
+              <option value="7">7 Players</option>
+              <option value="8">8 Players</option>
+              <option value="9">9 Players</option>
+              <option value="10">10+ Players</option>
+            </select>
           </div>
+          <div class="column">
+            <label style="color: black">Approx. Length of Game (in Hours)</label>
+            <select class="ui dropdown" id="Length">
+              <option value="">Game Length</option>
+              <option value="1">1 Hour</option>
+              <option value="2">2 Hours</option>
+              <option value="3">3 Hours</option>
+              <option value="4">4 Hours</option>
+              <option value="5">5+ Hours</option>
+            </select>
+          </div>
+        </div>
+        <br/>
         <div class="field">
           {{> Text_Form_Control label="Location" placeholder="Hale Hino Study Hall" required=optional errorMessage=(fieldError "picture")}}
         </div>
-        {{> Checkbox_Form_Control label="Is Smoking Permitted?" checkboxes=smoking errorMessage=(fieldError "smoking") }}
-        {{> Checkbox_Form_Control label="Is Alcohol Permitted?" checkboxes=alcohol errorMessage=(fieldError "alcohol") }}
-        <div class="fields">
-          {{> Text_Form_Control label="Meeting Date" required=false options=interests placeholder="04/07/2017" errorMessage=(fieldError "days") multiple=true }}
-          {{> Text_Form_Control label="Meeting Time" required=false options=interests placeholder="6:00pm" errorMessage=(fieldError "time") multiple=true }}
+        <div class="ui two column grid">
+          <div class="column">
+            <div class="ui checkbox">
+              <input type="checkbox" name="smoking" checked="">
+              <label>Is Smoking Permitted? </label>
+            </div>
+          </div>
+          <div class="column">
+            <div class="ui checkbox">
+              <input type="checkbox" name="alcohol" checked="">
+              <label>Is Alcohol Permitted? </label>
+            </div>
+          </div>
         </div>
+        <br/>
         <div class="fields">
-          {{> Checkbox_Form_Control label="Is this Meeting recurring?" checkboxes=recurring errorMessage=(fieldError "recurring") }}
+          {{> Text_Form_Control label="Meeting Date" id="date" required=false options=interests placeholder="04/07/2017" errorMessage=(fieldError "days") multiple=true }}
+          {{> Text_Form_Control label="Meeting Time" id="time" required=false options=interests placeholder="6:00pm" errorMessage=(fieldError "time") multiple=true }}
         </div>
+        <div class="ui checkbox">
+          <input type="checkbox" name="recurring" checked="">
+          <label>Is this meeting recurring? </label>
+        </div>
+        <br/>
+        <br/>
         <div class="fields">
-          {{> Social_Network_Form_Control label="Contact" required=false icon="person" placeholder="iamDM@hawaii.edu" value=profile.github errorMessage=(fieldError "github")}}
-          {{> Text_Form_Control label="Resources" placeholder="http://www.d20pfsrd.com/" errorMessage=(fieldError "resources") multiple=true }}
+          {{> Social_Network_Form_Control label="Contact" id="contact" required=false icon="person" placeholder="iamDM@hawaii.edu" value=profile.github errorMessage=(fieldError "github")}}
+          {{> Text_Form_Control label="Resources" id="resources" placeholder="http://www.d20pfsrd.com/" errorMessage=(fieldError "resources") multiple=true }}
         </div>
         <div class="field">
-          {{> TextArea_Form_Control label="About" value=profile.bio placeholder="Short statement about gameplay for those who never heard of game: Roleplaying game in which you play in a high-fantasy environment slaying monsters and solving puzzles. Required to bring: pencil. Optional: D20 dice set and $5.00 for pizza" errorMessage=(fieldError "about")}}
+          {{> TextArea_Form_Control label="About / Comments" id="about" value=profile.bio placeholder="Short statement about gameplay for those who never heard of game: Roleplaying game in which you play in a high-fantasy environment slaying monsters and solving puzzles. Required to bring: pencil. Optional: D20 dice set and $5.00 for pizza" errorMessage=(fieldError "about")}}
         </div>
         <br/>
         <button class="ui primary button" type="submit">Submit</button>
@@ -150,7 +203,7 @@
                   }
             }
           });
-      $('.dropdown').dropdown({transition: 'drop' }).dropdown({ on: 'hover' });
+      $('.dropdown').dropdown({ transition: 'drop' }).dropdown({ on: 'hover' });
     </script>
   </div>
 </template>
