--- a/app/imports/ui/pages/user/browse-page.html
+++ b/app/imports/ui/pages/user/browse-page.html
@@ -1,53 +1,69 @@
 <template name="Browse_Page">
   {{#If_Logged_In}}
-    <div class="ui fluid container">
-      {{#if Template.subscriptionsReady}}
-        <table style="margin-top: 20px" class="ui celled table">
-          <thead>
+    {{#if Template.subscriptionsReady}}
+      <table style="margin-top: 20px" class="ui compact striped orange left aligned small celled table">
+        <thead>
+        <tr>
+          <th>Category</th>
+          <th>Game Title</th>
+          <th>Max Players</th>
+          <th>Game Length</th>
+          <th>Location</th>
+          <th>Smoking</th>
+          <th>Alcohol</th>
+          <th>Date</th>
+          <th>Time</th>
+          <th>Recurring</th>
+          <th>Contact</th>
+          <th>Resources</th>
+          <th>About/Comments</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        {{#each listing in listingsList}}
           <tr>
-            <th>Category</th>
-            <th>Game Title</th>
-            <th>Max Players</th>
-            <th>Game Length</th>
-            <th>Location</th>
-            <th>smoking</th>
-            <th>alcohol</th>
-            <th>date</th>
-            <th>time</th>
-            <th>recurring</th>
-            <th>contact</th>
-            <th>resources</th>
-            <th>about</th>
-
-
-
-            <th>Edit</th>
+            <td>cat</td>
+            <td>{{listing.gameName}}</td>
+            <td>{{listing.maxPlayers}}</td>
+            <td>{{listing.gameLength}}</td>
+            <td>{{listing.location}}</td>
+            <td class="center aligned">
+              <i class="large green checkmark icon"></i>
+            </td>
+            <td class="center aligned">
+              <i class="large green checkmark icon"></i>
+            </td>
+            <td>{{listing.date}}</td>
+            <td>{{listing.time}}</td>
+            <td class="center aligned">
+              <i class="large green checkmark icon"></i>
+            </td>
+            <td>{{listing.contact}}</td>
+            <td>{{listing.resources}}</td>
+            <td>{{listing.about}}</td>
           </tr>
-          </thead>
-
-          <tbody>
-          {{#each listing in listingsList}}
-            <tr>
-              <td>cat</td>
-              <td>{{listing.gameName}}</td>
-              <td>{{listing.maxPlayers}}</td>
-              <td>{{listing.gameLength}}</td>
-              <td>{{listing.location}}</td>
-              <td>smoking</td>
-              <td>alcohol</td>
-              <td>{{listing.date}}</td>
-              <td>{{listing.time}}</td>
-              <td>recurring</td>
-              <td>{{listing.contact}}</td>
-              <td>{{listing.resources}}</td>
-              <td>{{listing.about}}</td>
-            </tr>
-          {{/each}}
-          </tbody>
-        </table>
-      {{else}}
-        {{> Loading}}
-      {{/if}}
-    </div>
+        {{/each}}
+        </tbody>
+        <tfoot>
+        <tr><th colspan="3">
+          <div class="ui floated pagination menu">
+            <a class="icon item">
+              <i class="left chevron icon"></i>
+            </a>
+            <a class="item">1</a>
+            <a class="item">2</a>
+            <a class="item">3</a>
+            <a class="item">4</a>
+            <a class="icon item">
+              <i class="right chevron icon"></i>
+            </a>
+          </div>
+        </th>
+        </tr></tfoot>
+      </table>
+    {{else}}
+      {{> Loading}}
+    {{/if}}
   {{/If_Logged_In}}
 </template>
